Clean up content

--- a/_posts/2017-04-01-about-me.md
+++ b/_posts/2017-04-01-about-me.md
@@ -8,11 +8,10 @@ emojis: ':computer: :mortar_board: :coffee: :fries: :muscle: :house_with_garden:
 
 <p class="emoji-text">:computer: :mortar_board: :coffee: :fries: :muscle: :house_with_garden: :basketball: :airplane:</p>
 
-- I love tinkering with new technologies and translating my ideas to code! I want to build applications that are innovative, meaningful, and fun to use.
+- I love tinkering and translating my ideas to code! I want to build applications that are innovative, meaningful, and fun to use.
 - I graduated from the University of California, Davis with a major in Computer Science and a minor in Computational Biology. Go Aggies!
-- I’m heavily fueled by a daily dose of 150+ mg of caffeine and 150+ g of carbs drenched in hot sauce. NOMS!
-- Since November 2014, I got my health in check and lost 30lb... so being a sweaty gym junky is kinda my thing now too.
 - I'm 916 born-n-raised, and a born again supporter of the Sacramento Kings. (Though I have a special place for all of my favorite NBA point guards.)
-- I was bit by my first wanderlust bug in 2013, and plan to explore many more places on my bucket list!
+- I was bit by my first wanderlust bug in 2013. Since then, I've traveled to 16 U.S. states and 13 countries. There's many more places on my bucket list!
+- I'm an avid user of emojis, memes, and the word *y'all*.
 
 <span class="bold-text">Let's share ideas and collaborate!</span><br>Contact <a href="mailto:{{ site.email }}"><u>lizshigetoshi@gmail.com</u></a>.
